--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emailjs/browser": "^4.3.3",
+    "@emailjs/browser": "^4.4.1",
     "@react-three/drei": "^9.106.1",
     "@react-three/fiber": "^8.16.8",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^11.2.10",
     "i": "^0.3.7",
     "maath": "^0.10.7",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "react-tilt": "^1.0.2",
